cleaned up this spike
- renamed everything to be more appropriate
- added some comments
- made the IRBlasterManager less dumb

--- a/device-communication-test/application/src/main/AndroidManifest.xml
+++ b/device-communication-test/application/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.markeffects.samsungoutreach">
+    package="com.markeffects.core">
 
     <uses-permission android:name="android.permission.TRANSMIT_IR"
         android:required="false" />
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".PowerCommand"
+            android:name="com.markeffects.core.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
