--- a/device-communication-test/application/build.gradle
+++ b/device-communication-test/application/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.markeffects.samsungoutreach"
+        applicationId 'com.markeffects.core'
         minSdkVersion 23
         targetSdkVersion 25
         versionCode 1
@@ -17,6 +17,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             debuggable true
         }
+    }
+    productFlavors {
     }
 }
 
