--- a/Infortainment_Control/app/src/main/AndroidManifest.xml
+++ b/Infortainment_Control/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.AppCompat.NoActionBar">
         <activity
             android:name=".InfortainmentControl"
-            android:label="@string/title_activity_index"
+            android:label="Infortainment Control"
             android:theme="@style/Theme.AppCompat.NoActionBar"
             android:screenOrientation="portrait">
             <intent-filter>
