--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 # User-specific stuff:
 .idea/**/workspace.xml
 .idea/**/tasks.xml
-.idea/dictionaries
+.idea/dictionaries/
+Infortainment_Control/.idea/dictionaries/mark.xml
 **/.idea/codeStyleSettings.xml
 
 # Sensitive or high-churn files:
