--- a/Infortainment_Control/app/build.gradle
+++ b/Infortainment_Control/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.2.0'
     compile 'com.roughike:bottom-bar:1.1.3'
     testCompile 'junit:junit:4.12'
+    compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     compile files('libs/jsoup-1.10.2.jar')
 }
